redesigned navbar, footer, and homepage with background colors and picture

--- a/public/page1.html
+++ b/public/page1.html
@@ -75,17 +75,17 @@
         <input style="font-size: 18px;" id="people" type="number" name="people" min="1" max="999" required><br>
         What is your desired date for this tour?<br>
         <input style="font-size: 18px;" id="date" type="date" name="date" required><br>
-        Desired time? <span class="helperText">(hh:mm am/pm)</span><br>
-        <input style="font-size: 18px;" id="time" type="time" name="time" required><br><br>
+        Desired time?<br>
+        <input style="font-size: 18px;" id="time" type="time" name="time" required><span class="helperText2">(hh:mm am/pm)</span><br><br>
         <b>Posting Details:</b><br>
         What is the best contact email?<br>
         <!-- <span class="notice">&nbsp;( i )</span>
         <div style="font-size: 18px;" class="noticebox">This will be the email Locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br> -->
-        <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><br>
+        <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><span class="helperText2">(publicly displayed)</span><br>
         How much do you want to offer your Local Guide?<br>
         <!-- <span class="notice">&nbsp;( i )</span>
         <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br> -->
-        <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><br><br>
+        <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><span class="helperText2">(in visiting country's currency)</span><br><br>
         <!-- <button type="button" onclick="store()">Submit</button> -->
         <input class="btn btn-primary" type="submit">
     </form>
@@ -96,5 +96,5 @@
         </div>
     </div>
 </body>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
