--- a/public/page11.html
+++ b/public/page11.html
@@ -83,5 +83,5 @@
     </div>
 </body>
 <br><br>
-<footer class="footer"><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer class="footer"><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
