--- a/public/page2.html
+++ b/public/page2.html
@@ -64,8 +64,8 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h5>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h5>
-                <h5>You will need an active email client on your computer to contact a Tourist.</h5>
+                <h6>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h6>
+                <h6>You will need an active email client on your computer to contact a Tourist.</h6>
             </div>
         </div>
         <br>
@@ -96,5 +96,5 @@
   </div>
 
 </body>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
