--- a/public/page3.html
+++ b/public/page3.html
@@ -71,8 +71,8 @@
         Password:<br>
         <input id="usrPass" style="font-size: 18px; width: 100%;" type="password" name="usrPass" maxlength="254" required><br>
         Account Type:<br>
-        <input style="font-size: 18px;" type="radio" name="account" value="1" checked> Tourist&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input style="font-size: 18px;" type="radio" name="account" value="2"> Local
+        <input style="font-size: 18px;" type="radio" name="account" value="1" checked> Tourist&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input style="font-size: 18px;" type="radio" name="account" value="2"> Local Guide
         <br><br>
         <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit" value="Sign Up"></div>
     </form>
@@ -82,5 +82,5 @@
     </div>
 </body>
 <br>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
