--- a/public/test.html
+++ b/public/test.html
@@ -76,7 +76,7 @@
                         <h5 class="card-header"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
                         <div class="card-body">
                         <div class="card-text">
-                        <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date: <span class="helperText">(YYYY/MM/DD)</span></b> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer: <span class="helperText">(in local currency)</span></b> ${arr[i].budget}.00</p>
+                        <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date:</b> <span class="helperText">(YYYY/MM/DD)</span> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer:</b> <span class="helperText">(in local currency)</span> ${arr[i].budget}.00</p>
                         </div>
                         <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-primary">Contact the Poster</button>
                         </div>
@@ -121,5 +121,5 @@
   </div>
 
 </body>
-<footer><hr>Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
