--- a/public/page10.html
+++ b/public/page10.html
@@ -32,8 +32,14 @@
                         <nav class="navbar">
                         <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
                             <ul class="nav justify-content-end">
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
+                                </li> -->
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/page1">Post</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/page2">Search</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="page4">How it Works</a>
