fixed footer for login pages

--- a/public/page2.html
+++ b/public/page2.html
@@ -65,7 +65,7 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h2>Local Guides: Browse Available Tour Requests from Tourists Below</h2>
+                <h2>Browse All Available Tour Requests from Tourists Below</h2>
             </div>
         </div>
         <div class="row">
