--- a/public/page4.html
+++ b/public/page4.html
@@ -24,7 +24,7 @@
     <script src="./script.js"></script>
 
 </head>
-<body>
+<body class="howtoBody">
         <div class="row">
             <div class="col-md-12">
                 <header>
@@ -52,7 +52,7 @@
                                 </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/page5">Tourist</a>
-                                        <a class="dropdown-item" href="/page6">Local GUide</a>
+                                        <a class="dropdown-item" href="/page6">Local Guide</a>
                                     </div>
                             </li>
                             <!-- <div id="google_translate_element"></div> -->
@@ -64,7 +64,7 @@
         <br>
         <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" style="background: white; opacity: .95;">
                 <h3>How Tour With a Local works</h3><br>
                 <p style="font-size: 20px;">
                     Tour With a Local connects Tourists and Locals through custom tours anywhere in the world. <br><br>
