--- a/public/page6.html
+++ b/public/page6.html
@@ -25,7 +25,7 @@
     <script src="./login.js"></script>
 
 </head>
-<body>
+<body class="loginBody">
         <div class="row">
             <div class="col-md-12">
                 <header>
@@ -82,5 +82,5 @@
     </div>
 </body>
 <br><br>
-<footer class="footer"><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer class="footer"><br>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
