fixed footer on sign up page

--- a/public/page3.html
+++ b/public/page3.html
@@ -25,7 +25,7 @@
     <script src="./login.js"></script>
 
 </head>
-<body>
+<body class="signupBody">
         <div class="row">
                 <div class="col-md-12">
                     <header>
@@ -88,5 +88,5 @@
     </div>
 </body>
 <br>
-<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer class="footer"><br>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
