--- a/public/test.html
+++ b/public/test.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div id="listings">
-                    <div class="card">
+                    <div class="card" style="box-shadow: 10px 10px grey;">
                         <h5 class="card-header"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
                         <div class="card-body">
                         <div class="card-text">
@@ -128,4 +128,13 @@
 
 </body>
 <footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+
+<script>
+    window.onload = function() {
+        $.getJSON("./codes.json", function(data){
+console.log(Object.keys(data))
+});
+}
+
+</script>
 </html>
