changed wording and changed footer and navbar colors to red

--- a/public/index.html
+++ b/public/index.html
@@ -78,19 +78,18 @@
                     </div>
                 </div>
                 
-                
             </div> <!--end home class-->
             <br><br><br>
             <div class="row">     
                     <div class="col-md-12">
-                        <h3 id="indexDescription"><b>Tour With a Local</b> helps match Tourists with Local Guides through custom tour requests.<br><br>Start by clicking either the blue button (Tourist) or the green button (Local Guide).</h3>
+                        <h2 id="indexDescription">Create your own travel experiences with <b>Tour With a Local</b>.</h2><br><br><h4 id="indexDescription2">Start by clicking either the blue button, if you're a Tourist, or the green button, if you want to be a Local Guide.</h4>
                     </div>
                 </div>
-                <br>
+                <br><br>
                 <div class="row home2">
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
-                        <h3 id="clickHere">Click <a href="/page4">here</a> to learn how <b>Tour With a Local</b> works.</h3>
+                        <h4 id="clickHere">Click <a href="/page4">here</a> to learn how <b>Tour With a Local</b> works.</h4>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
