--- a/public/page3.html
+++ b/public/page3.html
@@ -80,7 +80,7 @@
         <input style="font-size: 18px;" type="radio" name="account" value="1" checked> Tourist&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input style="font-size: 18px;" type="radio" name="account" value="2"> Local Guide
         <br><br>
-        <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit" value="Sign Up"></div>
+        <div class="loginButton"><input class="btn btn-info" style="width: 100%" type="submit" value="Sign Up"></div>
     </form>
             </div>
             <div class="col-md-4"></div>
