--- a/public/page6.html
+++ b/public/page6.html
@@ -74,7 +74,7 @@
                     <input id="lUsrName" style="font-size: 18px; width: 100%;" type="text" required><br>
                     Password:<br>
                     <input id="lUsrPass" style="font-size: 18px; width: 100%;" type="password" required><br><br>
-                    <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit" value="Log In"></div>
+                    <div class="loginButton"><input class="btn btn-info" style="width: 100%" type="submit" value="Log In"></div>
                 </form>
             </div>
             <div class="col-md-4"></div>
