--- a/public/page1.html
+++ b/public/page1.html
@@ -93,7 +93,7 @@
         <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br> -->
         <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><span class="helperText2">(in visiting country's currency)</span><br><br>
         <!-- <button type="button" onclick="store()">Submit</button> -->
-        <input class="btn btn-primary" type="submit" value="Post">
+        <input class="btn btn-info" type="submit" value="Submit Tour Request">
     </form>
             </div>
             <div class="col-md-7">
