--- a/public/page4.html
+++ b/public/page4.html
@@ -67,7 +67,7 @@
             <div class="col-md-12" style="background: white; opacity: .95;">
                 <h3>How Tour With a Local works</h3><br>
                 <p style="font-size: 20px;">
-                    Tour With a Local connects Tourists and Locals through custom tours anywhere in the world. <br><br>
+                    Tour With a Local lets Tourists create their own travel experiences. <br><br>
                     <b>Users:</b><br><br>
                     1) A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to pay for a Local to take them to do and see those things.<br><br>
                     2) Locals wanting to give tours can search through postings of tour requests made by Tourists and reach out to a Tourist to help them fullfill their travel plans.<br><br>
