--- a/public/page7.html
+++ b/public/page7.html
@@ -87,7 +87,7 @@
         <input style="font-size: 18px;" type="radio" name="account" value="1" checked> Tourist&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input style="font-size: 18px;" type="radio" name="account" value="2"> Local
         <br><br>
-        <div class="loginButton"><input class="btn btn-primary" style="width: 100%" type="submit"></div>
+        <div class="loginButton"><input class="btn btn-info" style="width: 100%" type="submit"></div>
     </form>
             </div>
             <div class="col-md-4"></div>
