--- a/public/test.html
+++ b/public/test.html
@@ -79,12 +79,12 @@
             <div class="col-md-12">
                 <div id="listings">
                     <div class="card" style="box-shadow: 10px 10px grey;">
-                        <h5 class="card-header"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
+                        <h5 class="card-header bg-info"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
                         <div class="card-body">
                         <div class="card-text">
                         <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date:</b> <span class="helperText">(YYYY/MM/DD)</span> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer:</b> <span class="helperText">(in local currency)</span> ${arr[i].budget}.00</p>
                         </div>
-                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-primary">Contact the Poster</button>
+                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-warning">Contact the Poster</button>
                         </div>
                         </div>
                         <br>
@@ -94,13 +94,13 @@
         <div class="row">
             <div class="col-md-12">
                 <div id="listings">
-                    <div class="card">
-                        <h5 class="card-header"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
+                    <div class="card" style="box-shadow: 10px 10px grey;">
+                        <h5 class="card-header bg-info"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
                         <div class="card-body">
                         <div class="card-text">
                         <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date: <span class="helperText">(YYYY/MM/DD)</span></b> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer: <span class="helperText">(in local currency)</span></b> ${arr[i].budget}.00</p>
                         </div>
-                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-primary">Contact</button>
+                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-warning">Contact</button>
                         </div>
                         </div>
                         <br>
