added local login, map, and flag

--- a/public/page1.html
+++ b/public/page1.html
@@ -29,7 +29,7 @@
                 <div class="col-md-12">
                     <header>
                     <nav class="navbar">
-                        <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
+                        <span class="title"><a href="/"><img src="./images/logo.png" height="60px" alt="logo"></a><span class="tm">&trade;</span></span>
                             <ul class="nav justify-content-end">
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
@@ -93,7 +93,7 @@
         <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br> -->
         <input style="font-size: 18px;" id="offer" type="number" name="budget" min="1" max="99999" required><span class="helperText2">(in visiting country's currency)</span><br><br>
         <!-- <button type="button" onclick="store()">Submit</button> -->
-        <input class="btn btn-info" type="submit" value="Submit Tour Request">
+        <input class="btn btn-info" type="submit" value="Submit Your Tour Request">
     </form>
             </div>
             <div class="col-md-7">
