--- a/public/page10.html
+++ b/public/page10.html
@@ -25,74 +25,6 @@
     <script src="./localAccount.js"></script>
 
 </head>
-<body onload="getData()">
-        <div class="row">
-                <div class="col-md-12">
-                    <header>
-                        <nav class="navbar">
-                        <span class="title"><img src="./images/logo.png" height="70px" alt="logo">&trade;</span>
-                            <ul class="nav justify-content-end">
-                                <!-- <li class="nav-item">
-                                    <a class="nav-link" href="/">Home</a>
-                                </li> -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/page1">Post</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/page2">Search</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="page4">How it Works</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/page3">Sign Up</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" onclick="logOut()" href="#">Log Out</a>
-                                </li>
-                                <!-- <div id="google_translate_element"></div> -->
-                            </ul>
-                        </nav>
-                    </header>
-                </div>
-            </div>
-    <div class="container">
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Local Guides: Browse Available Tour Requests from Tourists</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h4>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="listings">
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Contact the poster</h2>
-      <form style="font-size: 18px;" onsubmit="send()" id="email" method="post" enctype="text/plain">
-      Your message to the poster:<br>
-      <textarea style="font-size: 18px; width: 100%;" id="sendM" cols="60" rows="7" maxlength="799" required></textarea><br>
-      <input class="btn btn-primary" type="submit" value="Send">
-      </form>
-    </div>
-  
-  </div>
-
-</body>
-<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
-</html>
+<body onload="loadLocal()">
+    <div id="lLoad"></div>
+        
