--- a/public/page11.html
+++ b/public/page11.html
@@ -30,7 +30,7 @@
             <div class="col-md-12">
                 <header>
                     <nav class="navbar">
-                    <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
+                    <span class="title"><a href="/"><img src="./images/logo.png" height="60px" alt="logo"></a><span class="tm">&trade;</span></span>
                         <ul class="nav justify-content-end">
                             <!-- <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
