--- a/public/test.html
+++ b/public/test.html
@@ -18,7 +18,7 @@
 
     <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
@@ -29,7 +29,7 @@
                 <div class="col-md-12">
                     <header>
                         <nav class="navbar">
-                        <span class="title"><a href="/"><img src="./images/logo.png" height="70px" alt="logo"></a>&trade;</span>
+                        <span class="title"><a href="/"><img src="./images/logo.png" height="60px" alt="logo"></a><span class="tm">&trade;</span></span>
                             <ul class="nav justify-content-end">
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
@@ -79,14 +79,21 @@
             <div class="col-md-12">
                 <div id="listings">
                     <div class="card" style="box-shadow: 10px 10px grey;">
-                        <h5 class="card-header bg-info"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
+                        <h5 class="card-header bg-info"><b>City:</b> ${arr[i].city}<span class="flag"></span><br><b>State/Country:</b> ${arr[i].country}</h5>
                         <div class="card-body">
                         <div class="card-text">
+                            <div class="row">
+                                <div class="col-md-9">
                         <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date:</b> <span class="helperText">(YYYY/MM/DD)</span> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer:</b> <span class="helperText">(in local currency)</span> ${arr[i].budget}.00</p>
-                        </div>
                         <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-warning">Contact the Poster</button>
+                                </div>
+                                <div class="col-md-3">
+                        <img style="float: right;" src="https://www.mapquestapi.com/staticmap/v5/map?key=Zs2Sg9rdlJl0tdV45Tu8tGlbj0QkyOJI&center=washington,dc&size=200,200" srcset="https://www.mapquestapi.com/staticmap/v5/map?key=Zs2Sg9rdlJl0tdV45Tu8tGlbj0QkyOJI&center=washington,dc&size=200,200@2x 2x">
+                                </div>
+                            </div>
                         </div>
                         </div>
+                    </div>
                         <br>
                 </div>
             </div>
@@ -100,7 +107,8 @@
                         <div class="card-text">
                         <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date: <span class="helperText">(YYYY/MM/DD)</span></b> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer: <span class="helperText">(in local currency)</span></b> ${arr[i].budget}.00</p>
                         </div>
-                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-warning">Contact</button>
+                        <br>
+                        <h6><b>Login as a Local Guide to contact this Tourist</b></h6>
                         </div>
                         </div>
                         <br>
@@ -131,9 +139,12 @@
 
 <script>
     window.onload = function() {
-        $.getJSON("./codes.json", function(data){
-console.log(Object.keys(data))
-});
+//         $.getJSON("./codes.json", function(data){
+// console.log(data["Cuba"])
+// code = data[`${arr[i].country}`]
+
+$('.flag').append('<img src="https://www.countryflags.io/ad/flat/64.png" />')
+// });
 }
 
 </script>
