changed copyright, index buttons, and removed email helper text on posting pages

--- a/public/index.html
+++ b/public/index.html
@@ -68,10 +68,10 @@
                     <div class="row">
                             <div class="col-md-2"></div>
                         <div class="col-md-4">
-                            <button class="btn btn-primary btn-lg titleButton" onclick="window.location.href='/page1'">Post a Tour Request</button>
+                            <button class="btn btn-success btn-lg titleButton" onclick="window.location.href='/page1'">Post a Tour Request</button>
                         </div>                        
                         <div class="col-md-4">
-                            <button class="btn btn-success btn-lg titleButton" onclick="window.location.href='/page2'">Search Tour Requests</button>
+                            <button class="btn btn-info btn-lg titleButton" onclick="window.location.href='/page2'">Search Tour Requests</button>
                             <br>
                         </div>
                         <div class="col-md-2"></div>
@@ -82,7 +82,7 @@
             <br><br><br>
             <div class="row">     
                     <div class="col-md-12">
-                        <h2 id="indexDescription">Create your own travel experiences with <b>Tour With a Local</b>.</h2><br><br><h4 id="indexDescription2">Start by clicking either the blue button, if you're a Tourist, or the green button, if you want to be a Local Guide.</h4>
+                        <h2 id="indexDescription">Create your own travel experiences with <b>Tour With a Local</b>.</h2><br><br><h4 id="indexDescription2">Start by clicking either the green button, if you're a Tourist, or the blue button, if you want to be a Local Guide.</h4>
                     </div>
                 </div>
                 <br><br>
@@ -96,5 +96,5 @@
                 
     <!-- </div> -->
 </body>
-    <footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+    <footer><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
