--- a/public/page1.html
+++ b/public/page1.html
@@ -87,7 +87,7 @@
         What is the best contact email?<br>
         <!-- <span class="notice">&nbsp;( i )</span>
         <div style="font-size: 18px;" class="noticebox">This will be the email Locals will contact you at about your tour and will be publicly visible.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! or Hotmail.</div><br> -->
-        <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><span class="helperText2">(publicly displayed)</span><br>
+        <input style="font-size: 18px;" id="email" type="email" name="email" maxlength="99" required><br>
         How much do you want to offer your Local Guide?<br>
         <!-- <span class="notice">&nbsp;( i )</span>
         <div style="font-size: 18px;" class="noticebox">This is the amount you are offering to pay your Local Guide in their local currency and does not include extras like tickets, food, or entrance fees.</div><br> -->
@@ -102,5 +102,5 @@
         </div>
     </div>
 </body>
-<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
