--- a/public/page3.html
+++ b/public/page3.html
@@ -88,5 +88,5 @@
     </div>
 </body>
 <br>
-<footer class="footer"><br>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer class="footer"><br>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
