--- a/public/test.html
+++ b/public/test.html
@@ -135,7 +135,7 @@
   </div>
 
 </body>
-<footer><hr>&nbsp;Daniel Button &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
+<footer><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
 
 <script>
     window.onload = function() {
