moved add a tour form to front page, changed home hero img and changed nav colors

--- a/public/page3.html
+++ b/public/page3.html
@@ -30,16 +30,16 @@
                 <div class="col-md-12">
                     <header>
                         <nav class="navbar">
-                            <span class="title"><a href="/"><img src="./images/logo.png" height="60px" alt="logo"></a><span class="tm">&trade;</span></span>
+                            <span class="title"><a href="/"><img src="./images/logo.png" height="50px" alt="logo"></a><span class="tm">&trade;</span></span>
                                 <ul class="nav justify-content-end">
                                     <!-- <li class="nav-item">
                                         <a class="nav-link" href="/">Home</a>
                                     </li> -->
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a class="nav-link" href="/page1">Post</a>
-                                    </li>
+                                    </li> -->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/page2">Search</a>
+                                        <a class="nav-link" href="/page2">Become a Tour Guide</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="page4">How it Works</a>
