--- a/public/reading.html
+++ b/public/reading.html
@@ -18,7 +18,7 @@
 
     <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
@@ -71,47 +71,13 @@
         <div class="row">
             <div class="col-md-12">
                 <h6>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h6>
-                <h6>You will need an active email client on your computer to contact a Tourist.</h6>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-12">
                 <div id="listings">
-                    <div class="card" style="box-shadow: 10px 10px grey;">
-                        <h5 class="card-header bg-info"><b>City:</b> ${arr[i].city}<span class="flag"></span><br><b>State/Country:</b> ${arr[i].country}</h5>
-                        <div class="card-body">
-                        <div class="card-text">
-                            <div class="row">
-                                <div class="col-md-9">
-                        <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date:</b> <span class="helperText">(YYYY/MM/DD)</span> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer:</b> <span class="helperText">(in local currency)</span> ${arr[i].budget}.00</p>
-                        <button id='myBtn${arr[i].tourID}' value='${arr[i].email}' href="#" class="btn btn-warning">Contact the Poster</button>
-                                </div>
-                                <div class="col-md-3">
-                        <img style="float: right;" src="https://www.mapquestapi.com/staticmap/v5/map?key=Zs2Sg9rdlJl0tdV45Tu8tGlbj0QkyOJI&center=${arr[i].city},${arr[i].country}&size=200,200" srcset="https://www.mapquestapi.com/staticmap/v5/map?key=Zs2Sg9rdlJl0tdV45Tu8tGlbj0QkyOJI&center=${arr[i].city},${arr[i].country}&size=200,200@2x 2x">
-                                </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                        <br>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="listings">
-                    <div class="card" style="box-shadow: 10px 10px grey;">
-                        <h5 class="card-header bg-info"><b>City:</b> ${arr[i].city}<br><b>State/Country:</b> ${arr[i].country}</h5>
-                        <div class="card-body">
-                        <div class="card-text">
-                        <p><b>Description:</b> ${arr[i].description}<br><b>Number of People:</b> ${arr[i].people}<br><b>Date: <span class="helperText">(YYYY/MM/DD)</span></b> ${arr[i].date}<br><b>Time:</b> ${arr[i].time}<br><b>Offer: <span class="helperText">(in local currency)</span></b> ${arr[i].budget}.00</p>
-                        </div>
-                        <br>
-                        <h6><b>Login as a Local Guide to contact this Tourist</b></h6>
-                        </div>
-                        </div>
-                        <br>
+
                 </div>
             </div>
         </div>
@@ -135,17 +101,5 @@
   </div>
 
 </body>
-<footer><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">contact: tourwithalocal.us@gmail.com</span></footer>
-
-<script>
-    window.onload = function() {
-//         $.getJSON("./codes.json", function(data){
-// console.log(data["Cuba"])
-// code = data[`${arr[i].country}`]
-
-$('.flag').append('<img src="https://www.countryflags.io/ad/flat/64.png" />')
-// });
-}
-
-</script>
+<footer><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
