--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -62,44 +62,17 @@
                 </div>
             </div>
     <div class="container">
-        <br>
+        <br><br>
         <div class="row">
             <div class="col-md-12">
-                <h2>Browse All Available Tour Requests from Tourists Below</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h6>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search listings.</h6>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="listings">
-
-                </div>
+                <h2>Your Request has been submitted.</h2>
+                <br>
+                <h2>Tour guides will be in touch with you by the email you provided. Contact <b>Tour With a Local</b> if you have any questions.  Thanks!</h2>
+                <br><br>
+                <h2>Click <a href="/">here</a> to return to the home page.</h2>
             </div>
         </div>
     </div>
-    <br>
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Contact the poster</h2>
-      <form style="font-size: 18px;" onsubmit="send()" action="#" method="GET" id="sendEmail" enctype="text/plain">
-        Email Subject:<br>
-        <input style="font-size: 18px; width: 100%;" name="subject" type="text" /><br>
-      Your message to the poster:<br>
-      <textarea style="font-size: 18px; width: 100%;" id="sendM" name="body" cols="60" rows="7" maxlength="799" required></textarea><br>
-      <input class="btn btn-primary" type="submit" value="Send">
-      </form>
-    </div>
-  
-  </div>
-
 </body>
-<footer><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
+<footer class="footer"><hr>&nbsp;Tour With a Local &copy; 2018<span class="ourEmail">Questions, Comments, Help? Contact: tourwithalocal.us@gmail.com</span></footer>
 </html>
