added google analytics code

--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125173791-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125173791-1');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -67,9 +78,9 @@
             <div class="col-md-12">
                 <h2>Your Request has been submitted.</h2>
                 <br>
-                <h2>Tour guides will be in touch with you by the email you provided. Contact <b>Tour With a Local</b> if you have any questions.  Thanks!</h2>
+                <h3>Tour guides will be in touch with you by the email you provided. Contact <b>Tour With a Local</b> if you have any questions.  Thanks!</h3>
                 <br><br>
-                <h2>Click <a href="/">here</a> to return to the home page.</h2>
+                <h3>Click <a href="/">here</a> to return to the home page.</h3>
             </div>
         </div>
     </div>
