--- a/public/page4.html
+++ b/public/page4.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125173791-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125173791-1');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -68,10 +79,10 @@
                     Tour With a Local lets Tourists create their own travel experiences and meet Locals. <br><br>
                     <b>Users:</b><br><br>
                     1) A Tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to pay for a Local to take them to do and see those things.<br><br>
-                    2) Locals wanting to give tours can search through postings of tour requests made by Tourists and reach out to a Tourist to help them fullfill their travel plans.<br><br>
+                    2) Locals wanting to be tour guides can search through postings of tour requests made by Tourists and reach out to a Tourist to help them fullfill their travel plans.<br><br>
                     <b>Benefits:</b><br><br>
                     1) Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
-                    2) Locals benefit by sharing their knowledge with others and making extra income giving tours in their spare time.<br><br>
+                    2) Locals benefit by sharing their knowledge with others.<br><br>
                     3) Both parties benefit by making a connection to someone they might not otherwise have a chance to meet.<br><br>
                     <b>Safety:</b><br><br>
                     1) Meet at and only travel to public places.<br><br>
